apps/java-devops-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-devops-sample
  namespace: default
spec:
  selector:
    app: java-devops-sample
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
